# portfolio-tracker

./: .dockerignore  Dockerfile  PAPER_TRADING_IMPLEMENTATION.md  PROJECT_DOCUMENTATION.md  README.md  README_DB_MIGRATION.md  README_DEPLOY.md
backend/: .env  .gitignore  README.md  auth.py  claude_desktop_config.json  database.py  debug_paper_trading.py  list_models.py  list_models_new.py  llm.py  main.py  mcp_in_app.py  mcp_server.py  models.py  paper_trading_endpoints.py  portfolio.db  pyproject.toml  requirements.txt  reset_paper_trading.py  test_mcp_quick.py  test_mcp_server.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: CashManagementModal.jsx  ChatWidget.jsx  HoldingsCards.jsx  HoldingsTable.jsx  Login.jsx  MarketIndices.jsx  PaperTradingWelcome.jsx  Sidebar.jsx  StockChart.jsx  StockForm.jsx  TickerSearch.jsx  TransactionForm.jsx  TransactionModal.jsx  TransactionWizard.jsx  Watchlist.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Dashboard.jsx  ResearchPage.jsx  UserProfile.jsx  WatchlistPage.jsx
